feat: add data models, connect apis and setup mongodb

--- a/package.json
+++ b/package.json
@@ -5,11 +5,22 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node shopping-backend/server.js"
+    "start": "node shopping-backend/server.js",
+    "server": "nodemon shopping-backend/server.js",
+    "client": "npm start --prefix shopping-frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Zain Ul Abideen",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3"
+  },
+  "devDependencies": {
+    "concurrently": "^8.0.1",
+    "nodemon": "^2.0.22"
   }
 }
