--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "start": "node shopping-backend/server.js",
     "server": "nodemon shopping-backend/server.js",
     "client": "npm start --prefix shopping-frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "data:import": "node shopping-backend/seeder",
+    "data:destroy": "node shopping-backend/seeder -d"
   },
   "author": "Zain Ul Abideen",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^7.0.3"
   },
   "devDependencies": {
